--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "watch" : "node-sass -w src/resources/scss/ --output src/public/css/", 
+    "beautify": "lint-staged",
+    "watch": "node-sass -w src/resources/scss/ --output src/public/css/",
     "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,15 +23,25 @@
     "url": "https://github.com/52100086/nodejs_blog/issues"
   },
   "homepage": "https://github.com/52100086/nodejs_blog#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}" : "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit" : "lint-staged"
+    }
+    
+  },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
-
-
